--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -9,9 +9,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
-      <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="YOUR_API_KEY" />
+        <meta-data
+     android:name="com.google.android.geo.API_KEY"
+     android:value="AIzaSyAGSGsQUk9GI83AJYbeQchgEWM3hyWKZj8"/>  
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
