--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,8 @@
 PORT = 8000
 URI = "mongodb+srv://jicroofficial:hello_lode_yeh_secure_password_hai_samjha@database.vhcuc8z.mongodb.net/Directory?retryWrites=true&w=majority"
+
 JWT_SECRET = "hey_lode_yeh_secure_jwt_hai_samjha_bsdk_tu_hack_kr_hi_nhi_sakta_aukat_ke_bhar_hai_aur_agar_kr_bhi_liya_toh_maine_token_hi_itna_gand_pharu_banaya_hai_ki_tum_aage_ka_auth_kr_hi_nhi_pao_ge_samjha_berozgar_chappal_chor_satvi_fail_chal_jake_apna_kam_kr"
+
+Cloud_Name = "dvvo0yihr"
+Api_Key = "384264585666837"
+Api_Secret = "jer3UJOQWY4D9qLMgNQn0JBD8XI"
