--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "body-parser": "^1.20.2",
+    "cloudinary": "^1.35.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "env": "^0.0.2",
