--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "web": "react-scripts start"
   },
   "dependencies": {
     "@freakycoder/react-native-text-area": "^0.1.5",
@@ -20,14 +21,20 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.5",
     "fb-watchman": "^2.0.2",
+    "grunt": "^1.6.1",
     "moment": "^2.29.4",
     "nativewind": "^2.0.11",
+    "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-native": "0.71.4",
     "react-native-eject": "^0.2.0",
     "react-native-fast-image": "^8.6.3",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
+    "react-native-image-picker": "^5.3.1",
     "react-native-maps": "^1.4.0",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-onboarding-swiper": "^1.2.0",
@@ -36,7 +43,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-select-dropdown": "^3.3.2",
     "react-native-svg": "^13.8.0",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -49,6 +57,7 @@
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
+    "grunt-shell": "^4.0.0",
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.8",
     "prettier": "^2.4.1",
