--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "appcenter": "4.4.5",
+    "appcenter-analytics": "4.4.5",
+    "appcenter-crashes": "4.4.5",
     "axios": "^1.3.5",
     "fb-watchman": "^2.0.2",
     "firebase-admin": "^11.7.0",
@@ -43,6 +46,7 @@
     "react-native-gradle-plugin": "^0.71.17",
     "react-native-image-colors": "^1.5.2",
     "react-native-image-picker": "^5.3.1",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-maps": "^1.4.0",
     "react-native-maps-directions": "^1.9.0",
     "react-native-modal-datetime-picker": "^15.0.0",
