--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-code-push": "^8.0.1",
     "react-native-eject": "^0.2.0",
     "react-native-fast-image": "^8.6.3",
     "react-native-flash-message": "^0.4.1",
